--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* src/index.css */
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
 
@@ -32,7 +31,6 @@ body {
     line-height: 16px;
     text-align: left;
     overflow-x: hidden;
-    height: 5000px;
 }
 
 .dropdown-toggle::after {
@@ -501,32 +499,57 @@ p {
 
 .trending-card-discount {
     flex: 9;
-    flex-basis: 40px;
+    flex-basis: 35px;
     gap: 15px;
-    :first-child{
+
+    :first-child {
         background-color: rgba(255, 246, 251, 1);
     }
 
-    :nth-child(2){
+    :nth-child(2) {
         background-color: rgba(238, 239, 251, 1);
     }
 }
 
 .executive {
     flex: 3;
+
+    .executive-card {
+
+        img {
+            width: 90%;
+        }
+
+    }
+
 }
 
 .discountCard {
     flex-grow: 1;
-    height: 270px;
+    height: 250px;
     position: relative;
     padding: 20px;
     box-shadow: 0px 8px 40px 0px rgba(49, 32, 138, 0.05);
 
 
-    p , a{
+    p,
+    a {
         background-color: transparent !important;
     }
+
+    p {
+        font-family: Josefin Sans;
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    a {
+        font-family: Lato;
+        font-size: 14px;
+        font-weight: 500;
+        text-decoration: underline !important;
+    }
+
     img {
         position: absolute;
         right: 0;
@@ -534,8 +557,149 @@ p {
     }
 }
 
-
-
-
-
 /* Treding Products end*/
+
+/* Top categories start */
+
+.top-categories-cards {
+    width: 100%;
+}
+
+.top-categories-card {
+    height: 250px !important;
+    padding: 10px;
+
+    img {
+        width: 100%;
+        height: 100%;
+        padding: 1.5rem;
+        object-fit: contain;
+        border-radius: 50%;
+        background-color: #F6F7FB;
+        box-shadow: 0px 8px 40px 0px rgba(49, 32, 138, 0.05);
+        transition: .5s;
+    }
+
+    &:hover {
+        img {
+            transition: .5s;
+            box-shadow: -6px 8px 0px 0px rgba(152, 119, 231, 1);
+        }
+    }
+}
+
+.top-categories-section .slick-dots li button:before {
+    font-size: 18px;
+    color: #FB2E86;
+    opacity: 1;
+    content: "\25A1";
+    /* Square */
+    transform: rotate(45deg);
+    padding-top: 25px;
+    margin-bottom: 20px;
+}
+
+.top-categories-section .slick-dots li.slick-active button:before {
+    content: "\25A0";
+    color: #FB2E86;
+    opacity: 1;
+    transform: scale(1.2);
+    transform: rotate(45deg);
+}
+
+/* Top categories end */
+
+
+/* Subscribe start */
+
+.section-subscribe {
+    margin-top: 5rem;
+    padding: 6rem;
+    background: url("../src/assets/img/Background/Bg-photo.jpeg") lightgray 50% / cover no-repeat;
+    background-attachment: fixed;
+
+    .subscribe-container>p {
+        color: #151875;
+        width: 60%;
+        font-size: 30px;
+        font-weight: bold;
+        line-height: 155%;
+    }
+
+}
+
+/* Footer start */
+
+footer {
+    background-color: #EEEFFB;
+
+    .footer-main {
+        text-align: center;
+
+        .footer-signup {
+
+            .MuiButton-variantSolid {
+                background-color: #FB2E86;
+                color: #fff;
+                width: 120px;
+            }
+
+            h5 {
+                text-align: left !important;
+                color: #000;
+                font-family: "Josefin Sans";
+                font-size: 30px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+            }
+
+            p {
+                text-align: left;
+                color: #8A8FB9;
+                font-family: Lato;
+                font-size: 14px;
+                font-weight: 400;
+                margin: 0;
+
+            }
+
+            :nth-child(3) {
+                padding-top: 1rem;
+            }
+        }
+
+        .footer-container {
+
+            .footer-links {
+                padding: 0 2rem;
+
+                h5 {
+                    text-align: left;
+                    padding-bottom: 15px;
+                    font-size: 20px;
+                    font-style: normal;
+                    font-weight: 600;
+                    line-height: normal;
+                }
+
+                ul {
+                    list-style: none;
+                    text-align: left;
+                    padding-left: 0;
+
+                    li {
+                        padding: 8px 0px;
+                        color: #8A8FB9;
+                        font-family: Lato;
+                        font-size: 14px;
+                        font-weight: 400;
+                        line-height: normal;
+                    }
+                }
+            }
+        }
+    }
+}
+
+/* Footer end */
