--- a/src/App.css
+++ b/src/App.css
@@ -159,7 +159,6 @@ a {
 }
 
 .featuredCard .slick-list {
-    /* margin: 8px; */
     width: 100%;
 }
 
@@ -184,12 +183,6 @@ a {
     border-radius: 5px;
     transition: .3s;
 }
-
-/* .featured-details {
-    background-color: #08D15F;
-    color: #fff;
-    visibility: hidden;
-}*/
 
 .featuredCard .slick-dots li:nth-child(1) button::before {
     background-color: #05E6B7;
@@ -703,3 +696,30 @@ footer {
 }
 
 /* Footer end */
+
+.row-links-section {
+    background-color: rgba(246, 245, 255, 1);
+    padding: 5.5rem 0px 5.5rem 24px;
+
+    .row-links-container {
+
+        h3 {
+            color: #101750;
+            font-family: "Josefin Sans";
+            font-size: 32px;
+        }
+
+        ul {
+            list-style-type: none;
+            display: flex;
+            gap: 5px;
+            padding: 0;
+
+            /* li{
+                &:last-child{
+                    background-color: red;
+                }
+            } */
+        }
+    }
+}
