--- a/src/Components/Login Page/Login.css
+++ b/src/Components/Login Page/Login.css
@@ -1,5 +1,9 @@
-.css-156u99p-MuiInputBase-input-MuiOutlinedInput-input{
-    padding: 20px !important;
+#input-with-icon-textfield{
+    padding: 18px !important;
+}
+
+#outlined-adornment-password{
+    padding: 18px !important;
 }
 
 .css-ay5mhz{
